Fix styles; better on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,12 +59,10 @@ section {
 .navbar {
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
   align-items: center;
   background: inherit;
   gap: 0.5rem;
   padding: 0.5rem;
-  border-bottom: 3px solid #bb2a0e;
 }
 .navbar .nav__title {
   font-size: 2.3rem;
@@ -72,15 +70,15 @@ section {
 .navbar .nav__links {
   display: flex;
   gap: 0.3rem;
-  width: 90%;
+  width: 40%;
   align-items: center;
 }
-.navbar .nav__links button:nth-child(1) {
+.navbar .nav__links button:nth-child(2) {
   display: none;
 }
 .navbar .nav__links button {
+  padding-block: 0.6rem;
   width: 100%;
-  height: 35px;
   text-align: center;
   text-transform: capitalize;
   border-radius: 100px;
@@ -97,7 +95,7 @@ section {
   .navbar .nav__title {
     font-size: 3rem;
   }
-  .navbar .nav__links button:nth-child(1) {
+  .navbar .nav__links button:nth-child(2) {
     display: block;
   }
   .navbar .nav__links {
@@ -105,8 +103,6 @@ section {
     gap: 0.4rem;
   }
   .navbar .nav__links button {
-    height: auto;
-    padding-block: 0.5rem;
     width: 120px;
   }
 }
@@ -120,7 +116,7 @@ section {
 .hero .hero__sub {
   align-self: flex-end;
   margin-bottom: 1rem;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   font-size: 2rem;
   max-width: 25ch;
 }
@@ -143,18 +139,21 @@ section {
   gap: 0.5rem;
   justify-content: center;
 }
-.features .features__list li {
+.features .list__itm {
   background: #f15b3e;
-  height: 150px;
-  border-radius: 2px;
+  height: 200px;
+  border-radius: 3px;
   display: flex;
   align-items: center;
-  padding-inline: 0.5rem;
+  padding-inline: 0.8rem;
 }
 .features p {
   max-width: 40ch;
 }
-.features .features__list div {
+.features .list__itm i {
+  font-size: 1.5rem;
+}
+.features .itm__wrapper {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
